--- a/index.html
+++ b/index.html
@@ -1,3 +1,248 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Анализ юридических документов</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  min-height: 100vh;
+  margin: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 40px auto;
+  background: #fff;
+  border-radius: 20px;
+  padding: 40px;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+}
+
+.upload-area {
+  border: 3px dashed #667eea;
+  border-radius: 15px;
+  padding: 40px;
+  text-align: center;
+  margin-bottom: 30px;
+  background: #f8f9ff;
+  transition: 0.3s;
+}
+
+.upload-area.dragover {
+  background: #e8ebff;
+  border-color: #764ba2;
+}
+
+.upload-btn {
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  color: #fff;
+  padding: 15px 40px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.1em;
+  cursor: pointer;
+}
+
+.analyze-btn {
+  background: linear-gradient(135deg, #f093fb, #f5576c);
+  color: #fff;
+  padding: 15px 40px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.1em;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.file-list {
+  margin: 20px 0;
+}
+
+.file-item {
+  background: #f8f9ff;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.file-name {
+  color: #333;
+  font-weight: 500;
+}
+
+.remove-btn {
+  background: #ff4757;
+  color: #fff;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.loader {
+  text-align: center;
+  padding: 20px;
+}
+
+.spinner {
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #667eea;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg);}
+  100% { transform: rotate(360deg);}
+}
+
+/* Стили для различий и фильтров */
+.stats-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.stat-card {
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  color: #fff;
+  padding: 25px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.stat-card:nth-child(2) {
+  background: linear-gradient(135deg, #f093fb, #f5576c);
+}
+
+.filter-buttons {
+  margin: 20px 0 10px 0;
+  display: flex;
+  gap: 10px;
+}
+
+.filter-btn {
+  padding: 10px 20px;
+  border: 2px solid #667eea;
+  background: #fff;
+  color: #667eea;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.filter-btn.active {
+  background: #667eea;
+  color: #fff;
+}
+
+.differences-section {
+  margin-top: 30px;
+}
+
+.file-differences {
+  background: #f8f9ff;
+  padding: 20px;
+  border-radius: 10px;
+  margin: 15px 0;
+  border-left: 5px solid #667eea;
+}
+
+.toggle-icon { font-size: 1.2em; transition: 0.3s; }
+
+.toggle-icon.expanded { transform: rotate(90deg); }
+
+.sentences-container {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+}
+
+.sentences-container.expanded { max-height: 2000px; }
+
+.sentence-item {
+  padding: 10px;
+  margin: 8px 0;
+  border-radius: 5px;
+  font-size: 0.95em;
+  line-height: 1.6;
+}
+
+.unique-sentence {
+  background: #e8f5e9;
+  border-left: 4px solid #4caf50;
+  color: #1b5e20;
+}
+
+.common-sentence {
+  background: #fff3e0;
+  border-left: 4px solid #ff9800;
+  color: #e65100;
+}
+
+.sentence-badge {
+  display: inline-block;
+  padding: 2px 8px;
+  border-radius: 3px;
+  font-size: 0.8em;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.badge-unique {
+  background: #4caf50;
+  color: #fff;
+}
+
+.badge-common {
+  background: #ff9800;
+  color: #fff;
+}
+
+.comparison-matrix {
+  margin-top: 30px;
+}
+
+.matrix-cell {
+  background: #f8f9ff;
+  padding: 15px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.similarity-high { background: #ff4757; color: #fff; }
+.similarity-medium { background: #ffa502; color: #fff; }
+.similarity-low { background: #2ed573; color: #fff; }
+
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>📄 Анализ юридических документов</h1>
+    <p class="subtitle">Загрузите до 5 PDF-файлов для сравнения (до 100 МБ каждый!)</p>
+    <div class="upload-area" id="uploadArea">
+      <label for="fileInput">
+        <span class="upload-btn">Выбрать файлы</span>
+      </label>
+      <input type="file" id="fileInput" accept=".pdf" multiple>
+      <p style="margin-top: 15px; color: #666;">Максимум 5 файлов. Drag&Drop поддерживается!</p>
+    </div>
+    <div class="file-list" id="fileList"></div>
+    <button class="analyze-btn" id="analyzeBtn" disabled>🔍 Анализировать документы</button>
+    <div class="loader" id="loader"></div>
+    <div class="results" id="results"></div>
+  </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 <script>
     pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
@@ -399,3 +644,5 @@
         });
     }
 </script>
+</body>
+</html>
