--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@ body {
             progressCallback(file.name, progress);
             
             // Принудительная сборка мусора (если доступна)
-            if (global.gc) {
-                global.gc();
-            }
+            // if (global.gc) {
+            //     global.gc();
+            // }
         }
         
         return fullText;
