--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Анализ юридических документов</title>
+  <title>Анализ  документов</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <style>
 body {
@@ -228,7 +228,7 @@ body {
 </head>
 <body>
   <div class="container">
-    <h1>📄 Анализ юридических документов</h1>
+    <h1>📄 Анализ  документов</h1>
     <p class="subtitle">Загрузите до 5 PDF-файлов для сравнения (до 100 МБ каждый!)</p>
     <div class="upload-area" id="uploadArea">
       <label for="fileInput">
