--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ body {
     </div>
     <div class="file-list" id="fileList"></div>
     <button class="analyze-btn" id="analyzeBtn" disabled>🔍 Анализировать документы</button>
+    <div id="progressText" style="margin-top:20px; color:#667eea; min-height:1.5em;"></div>
 
     <div class="results" id="results"></div>
   </div>
