--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@ body {
     <div class="file-list" id="fileList"></div>
     <button class="analyze-btn" id="analyzeBtn" disabled>🔍 Анализировать документы</button>
     <div id="progressText" style="margin-top:20px; color:#667eea; min-height:1.5em;"></div>
+<div id="fileProgress" style="margin-top: 3px; color: #888; font-size: 14px;"></div>
 
     <div class="results" id="results"></div>
   </div>
