--- a/index.html
+++ b/index.html
@@ -545,11 +545,16 @@ if (docCommon.length > 0) {
                         const files = Array.from(sentenceToFiles.get(sent));
                         const otherFiles = files.filter(f => f !== doc.name).join(', ');
                         html += `
-                            <div class="sentence-item common-sentence" data-type="common">
-                                ${sent}
-                                <br><small style="opacity: 0.7;">Также в: ${otherFiles}</small>
-                            </div>
-                        `;
+    <div class="sentence-item common-sentence" data-type="common">
+        ${sent}
+        <div style="font-size:0.9em;color:#666;margin-top:2px;">
+          <strong>Также содержится в:</strong>
+          <ul style="margin:0; padding-left:20px;">
+            ${files.filter(f => f !== doc.name).map(f => `<li>${f}</li>`).join('')}
+          </ul>
+        </div>
+    </div>
+`;
                     });
                     if (docCommon.length > 20) {
                         html += `<p style="color: #666; margin-top: 10px;">...и еще ${docCommon.length - 20} общих предложений</p>`;
