--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ body {
   transition: max-height 0.3s ease;
 }
 
-.sentences-container.expanded { max-height: 2000px; }
+.sentences-container.expanded { max-height: 600px; overflow-y: auto; }
 
 .sentence-item {
   padding: 10px;
