--- a/index.html
+++ b/index.html
@@ -224,6 +224,28 @@ body {
 .similarity-medium { background: #ffa502; color: #fff; }
 .similarity-low { background: #2ed573; color: #fff; }
 
+.custom-file-label {
+  display: inline-block;
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  color: #fff;
+  padding: 15px 40px;
+  border-radius: 10px;
+  font-size: 1.1em;
+  font-family: inherit;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  border: none;
+  text-align: center;
+}
+    
+.custom-file-label:hover {
+  box-shadow: 0 4px 16px rgba(118,75,162,0.09);
+}
+    
+    #fileInput {
+  display: none;
+}
   </style>
 </head>
 <body>
@@ -231,12 +253,12 @@ body {
     <h1>📄 Анализ  документов</h1>
     <p class="subtitle">Загрузите до 5 PDF-файлов для сравнения (до 100 МБ каждый!)</p>
     <div class="upload-area" id="uploadArea">
-      <label for="fileInput">
-        <span class="upload-btn">Выбрать файлы</span>
-      </label>
-      <input type="file" id="fileInput" accept=".pdf" multiple>
-      <p style="margin-top: 15px; color: #666;">Максимум 5 файлов. Drag&Drop поддерживается!</p>
-    </div>
+  <label class="custom-file-label" for="fileInput">
+    Выбрать файлы
+  </label>
+  <input type="file" id="fileInput" accept=".pdf" multiple>
+  <p style="margin-top: 15px; color: #666;">Максимум 5 файлов. Drag&Drop поддерживается!</p>
+</div>
     <div class="file-list" id="fileList"></div>
     <button class="analyze-btn" id="analyzeBtn" disabled>🔍 Анализировать документы</button>
     <div id="progressText" style="margin-top:20px; color:#667eea; min-height:1.5em;"></div>
